Fixed glitch - science visible even in portrait

--- a/indexcalc.css
+++ b/indexcalc.css
@@ -13,6 +13,10 @@
 		width: 100%;
 	}
 
+	.buttons.science {
+		display: none;
+	}
+
 	button.calc {
 		font-size: 12vmin;
 	}
@@ -62,8 +66,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	transition: color 0.3s;
-	transition: height 0.1s;
+	transition: color 0.3s, height 0.1s;
 }
 
 #screen:focus {
@@ -114,8 +117,7 @@ button.calc {
 	box-shadow: 0 2px 1px #C0C0C0, 0 -1px 2px white;
 	text-align: center;
 	line-height: 50%;
-	transition: background-color 0.3s;
-	transition: padding-top 0.1s;
+	transition: background-color 0.3s, padding-top 0.1s;
 }
 
 button.calc.inverse {
